--- a/config/x_hh_bbww_run3.yaml
+++ b/config/x_hh_bbww_run3.yaml
@@ -23,7 +23,7 @@ processes:
     hist_name: ggRadion_HH_bbWW_M${MX}
     param_values: [ 250, 260, 270, 280, 300, 350, 450, 550, 600, 650, 700, 800 ]
     is_signal: true
-    scale: 2 * 5.824e-01 * ( 2.137e-01 * 3 * 10.86e-02 * 3 * 10.86e-02)
+    scale: 2 * 5.824e-01 * ( 2.137e-01 * 3 * 10.86e-02 * 3 * 10.86e-02 + 2 * 2.619E-02 * 3 * 3.3658e-02 * 0.2)
   - TT
   - DY
   - ST
@@ -38,7 +38,7 @@ uncertainties:
     type: auto
   - name: pu
     type: auto
-autolnNThr: 0.05
+autolnNThr: 0.1
 asymlnNThr: 0.001
 ignorelnNThr: 0.001
 autoMCStats:
